# flip-clock

./: .gitignore  LICENSE  README.md  update.json
.github/workflows/: ci.yml  release.yml
frontend/: clock.js  index.html  styles.css
frontend/css/: flipclock.css  styles.css
frontend/demos/: twenty-four-hour-clock-without-seconds.html.html  twenty-four-hour-clock.html.html
frontend/js/: flipclock.min.js  update.js
scripts/: SetFileIcon  SetFileIcon.swift  build.sh  fix-dmg-icon.sh  regen-icons.py  regen-icons.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  menu.rs
